<resources>
    <string name="app_name">WaveAccessTest</string>
    <string name="user_name">Имя пользователя</string>
    <string name="user_email">test@example.com</string>
    <string name="is_active_status_text_view">Is active</string>
    <string name="name_header_text_view">Name </string>
    <string name="name_value_text_view"> Name </string>
    <string name="age_header">Age</string>
    <string name="age_value">99</string>
    <string name="user_detail_header_text">User</string>
    <string name="user_detail_name_text">Name</string>
    <string name="user_detail_name_text_value">Alex</string>
    <string name="user_detail_age_text">Age</string>
    <string name="user_detail_age_text_value">20</string>
    <string name="user_detail_company_text">Company</string>
    <string name="user_detail_name_company_value">WaveAccess</string>
    <string name="user_detail_email_text">email</string>
    <string name="user_detail_name_email_value">example@example.com</string>
    <string name="user_detail_phone_text">Phone</string>
    <string name="user_detail_name_phone_value">+19456743</string>
    <string name="user_detail_address_text">Address</string>
    <string name="user_detail_name_address_value">Victory avenue</string>
    <string name="user_detail_about_text">About</string>
    <string name="user_detail_name_about_value">Text</string>
    <string name="user_detail_eye_color_text">Eye color</string>
    <string name="user_detail_favorite_fruit_text">Favorite Fruit</string>
    <string name="user_detail_registered_text">Registered</string>
    <string name="user_detail_registered_text_value">23.04.45</string>
    <string name="user_detail_coordinates_text">Coordinates</string>
    <string name="user_detail_coordinates_value">Coordinates</string>
    <string name="user_detail_friends_header">Friends</string>
    <string name="users_list_header_tv">Users List</string>
    <string name="state_error_tv">Ошибка при загрузке данных</string>
    <string name="refresh_button_text">Обновить данные</string>
</resources>