<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/user_detail_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/user_detail_header_text"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested_scrol_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_detail_header">

        <LinearLayout
            android:id="@+id/main_linear_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/name_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_name_detail_tv"
                    android:layout_width="20dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center|left"
                    android:text="@string/user_detail_name_text" />

                <TextView
                    android:id="@+id/user_name_detail_value_tv"
                    android:layout_width="90dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/user_detail_name_text_value" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/age_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_age_detail_tv"
                    android:layout_width="20dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/user_detail_age_text" />

                <TextView
                    android:id="@+id/user_age_detail_value_tv"
                    android:layout_width="90dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/user_detail_age_text_value" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/company_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_company_detail_tv"
                    android:layout_width="20dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/user_detail_company_text" />

                <TextView
                    android:id="@+id/user_company_detail_value_tv"
                    android:layout_width="90dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/user_detail_name_company_value" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/email_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_email_detail_tv"
                    android:layout_width="20dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/user_detail_email_text" />

                <TextView
                    android:id="@+id/user_email_detail_value_tv"
                    android:layout_width="90dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/user_detail_name_email_value" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/phone_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_phone_detail_tv"
                    android:layout_width="20dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/user_detail_phone_text" />

                <TextView
                    android:id="@+id/user_phone_detail_value_tv"
                    android:layout_width="90dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/user_detail_name_phone_value" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/address_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_address_detail_tv"
                    android:layout_width="20dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/user_detail_address_text" />

                <TextView
                    android:id="@+id/user_address_detail_value_tv"
                    android:layout_width="90dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/user_detail_name_address_value" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/about_linaer_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_about_detail_tv"
                    android:layout_width="20dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/user_detail_about_text" />

                <TextView
                    android:id="@+id/user_about_detail_value_tv"
                    android:layout_width="90dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/user_detail_name_about_value" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/eye_color_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_eye_colour_detail_tv"
                    android:layout_width="20dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/user_detail_eye_color_text" />

                <ImageView
                    android:id="@+id/eye_color_imange_view"
                    android:layout_width="90dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_notification_overlay" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/favorite_fruit_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_favorite_fruit_detail_tv"
                    android:layout_width="20dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/user_detail_favorite_fruit_text" />

                <ImageView
                    android:id="@+id/favorite_fruite_image_view"
                    android:layout_width="90dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_notification_overlay" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/registstered_linear_layout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_registered_detail_tv"
                    android:layout_width="20dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/user_detail_registered_text" />

                <TextView
                    android:id="@+id/user_registered_detail_value_tv"
                    android:layout_width="90dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/user_detail_registered_text_value" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/coordinate_lineat_layout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_coordinates_detail_tv"
                    android:layout_width="20dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center|start"
                    android:text="@string/user_detail_coordinates_text" />

                <TextView
                    android:id="@+id/user_coordinates_detail_value_tv"
                    android:layout_width="90dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/user_detail_coordinates_value" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fre"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/friemd_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/user_detail_friends_header" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/friends_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>